[package]
name = "subbeat"
version = "0.0.2"
edition = "2018"

license = "MIT OR Apache-2.0"
description = "Time Series kit"
homepage = "https://subbeat.rs/"
documentation = "https://docs.rs/subbeat"
repository = "https://github.com/subbeat/subbeat"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
