[package]
name = "subbeat"
version = "0.0.2"
edition = "2018"

license = "MIT OR Apache-2.0"
description = "Time Series kit"
homepage = "https://subbeat.rs/"
documentation = "https://docs.rs/subbeat"
repository = "https://github.com/subbeat/subbeat"
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = "2.33.3"
hyper = { version = "0.14.13", features = ["full"] } 
hyper-tls = "0.5.0"
