[package]
name = "subbeat"
version = "0.0.7"
edition = "2018"

license = "MIT OR Apache-2.0"
description = "Time Series kit"
homepage = "https://subbeat.rs/"
documentation = "https://docs.rs/subbeat"
repository = "https://github.com/subbeat/subbeat"
readme = "README.md"

[dependencies]
bytes = "1"
tokio = { version = "1", features = ["full"] }
clap = "2.33.3"
hyper = { version = "0.14.13", features = ["full"] } 
hyper-tls = "0.5.0"
serde = { version = "1.0" }
serde_json = "1.0.68"
serde_derive = "1.0"
serde_qs = "0.8.5"
async-trait = "0.1.51"
anyhow = "1.0.13"
csv = "1.1"
chrono = "0.4.19"
